fix: hidden overflow on circle does not work on all browsers

--- a/app/front/less/main/index.less
+++ b/app/front/less/main/index.less
@@ -40,9 +40,8 @@ body {
 .station-marker {
   position: absolute;
   margin: -@width/2 0 0 -@width/2;
-  width: @width+2;
-  height: @width+2;
-  padding: 1px;
+  width: @width;
+  height: @width;
 
   .circle, canvas {
     position: absolute;
@@ -53,6 +52,7 @@ body {
   .circle {
     border-radius: @width;
     background-color: fade(@orange, 90%);
+    overflow: hidden;
   }
 
   @textWidth: 32px;
